--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,6 +2,8 @@
   margin: 0 auto;
   max-width: 882px;
   padding-bottom: 41px;
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 1024px) {
