--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
 @import url(../src/blocks/header/__line/header__line.css);
 @import url(../src/blocks/header/__logo/header__logo.css);
 @import url(../src/blocks/header/__link/header__link.css);
+@import url(../src/blocks/header/__container/header__container.css);
+@import url(../src/blocks/header/__container-text/header__container-text.css);
 
 @import url(../src/blocks/content/content.css);
 
@@ -54,6 +56,9 @@
 @import url(../src/blocks/popup/__container/_confirm/popup__container_confirm.css);
 @import url(../src/blocks/popup/__submit/_confirm/popup__submit_confirm.css);
 @import url(../src/blocks/popup/__container/_update/popup__container_update.css);
+@import url(../src/blocks/popup/__container/_reg-response/popup__container_reg-response.css);
+@import url(../src/blocks/popup/__reg-image/popup__reg-image.css);
+@import url(../src/blocks/popup/__reg-title/popup__reg-title.css);
 
 @import url(../src/blocks/register/register.css);
 @import url(../src/blocks/register/__heading/register__heading.css);
